2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: Krzysztof Foltman  <kfoltman@users.sf.net>

	* README:
	* dllwrapper1/wine/pe_image.c:
	  What if there is now DllMain?

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.def:
	  Add def file to get same symbol names as original dsplib.

	* src/dsplib/dsplib.cpp:
	  Structure source so that we can add dummies for the missing parts.


2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	  Add example for native plugins.

2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Different workaround for Bug #1981932.

2008-06-17  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	* src/Makefile.am:
	  Workaround for Bug #1981932.

2008-06-15  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild.

	* src/dsplib/dsplib.cpp:
	* src/dsplib/dsplib.sln:
	* src/dsplib/dsplib.vcproj:
	  Add projects files and tweak the build.

2008-06-13  Stefan Kost  <ensonic@users.sf.net>

	* src/dsplib/Makefile:
	* src/dsplib/dsplib.cpp:
	  Adding dsplib rewrite donated by zubb.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/module.c:
	  Comment out unused function.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Fix _LIBS var with wrong name.

2008-05-28  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Valgrind fixes.

2008-05-13  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version that calls host callbacks.

2008-05-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/dsplib.h:
	  Crosscompilation fixes.

2008-05-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp: